<resources>
    <string name="app_name">SB Delivery</string>
    <string name="send_review">Отправить отзыв</string>
    <string name="enter_review">Введите отзыв</string>
    <string name="send">Отправить</string>
    <string name="title_home">Главная</string>
    <string name="promotion">АКЦИЯ</string>
    <string name="dish_image">Изображение блюда</string>
    <string name="like_button">like button</string>
    <string name="add_dish_to_cart_button">Добавить в корзину</string>
    <string name="close_dialog">Закрыть диалог</string>
    <string name="drawer_title_home">Главная</string>
    <string name="drawer_title_menu">Меню</string>
    <string name="drawer_title_favorite">Избранное</string>
    <string name="drawer_title_cart">Корзина</string>
    <string name="drawer_title_profile">Профиль</string>
    <string name="drawer_title_orders">Заказы</string>
    <string name="drawer_title_notifications">Уведомления</string>
    <string name="drawer_title_about">О приложении</string>
    <string name="header_background">Фон хэдэра у меню</string>
    <string name="image_with_logo">Изображение с логотипом</string>
    <string name="title_recommend">Рекомендуем</string>
    <string name="see_all">См. все</string>
    <string name="title_best">Лучшее</string>
    <string name="title_popular">Популярное</string>

    <string name="price">%s ₽</string>
    <string name="menu_search_title">Search</string>
    <string name="search_dish">Поиск блюд</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="reviews">Отзывы</string>
    <string name="cart">Корзина</string>
    <string name="description_category_image">Иконка категории</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="login_error">Некорректный e-mail</string>
    <string name="login">Войти</string>
    <string name="register">Регистрация</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="register2">Зарегистрироваться</string>
    <string name="login2">Вход</string>
    <string name="password_restore_info">Введите электронную почту, которую вы использовали при регистрации, и мы вышлем на нее код для восстановления пароля</string>
    <string name="enter_code">Введите проверочный код</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="save">Сохранить</string>
    <string name="new_password_info">Введите новый пароль</string>
</resources>