<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeDestination"
        android:icon="@drawable/ic_home"
        android:title="@string/drawer_title_home" />

    <item
        android:id="@+id/menuDestination"
        android:icon="@drawable/ic_menu"
        android:title="@string/drawer_title_menu" />

    <item
        android:id="@+id/favoriteDestination"
        android:icon="@drawable/ic_favorite"
        android:title="@string/drawer_title_favorite" />

    <item
        android:id="@+id/cartDestination"
        android:icon="@drawable/ic_cart"
        android:title="@string/drawer_title_cart" />

    <item
        android:id="@+id/profileDestination"
        android:icon="@drawable/ic_profile"
        android:title="@string/drawer_title_profile" />

    <item
        android:id="@+id/ordersDestination"
        android:icon="@drawable/ic_orders"
        android:title="@string/drawer_title_orders" />

    <item
        android:id="@+id/notificationDestination"
        android:icon="@drawable/ic_notification"
        android:title="@string/drawer_title_notifications" />

</menu>