<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeDestination">

    <fragment
        android:id="@+id/homeDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.home.HomeFragment"
        android:label="@string/drawer_title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeDestination_to_dishFragment"
            app:destination="@id/dishDestination"
            app:popUpTo="@id/homeDestination"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/menuDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.menu.MenuFragment"
        android:label="@string/drawer_title_menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menuDestination_to_searchFragment"
            app:destination="@id/searchDestination" />
    </fragment>

    <fragment
        android:id="@+id/aboutDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.about.AboutFragment"
        android:label="@string/drawer_title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/cartDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.cart.CartFragment"
        android:label="@string/drawer_title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/favoriteDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.favorite.FavoriteFragment"
        android:label="@string/drawer_title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/notificationDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.notifications.NotificationsFragment"
        android:label="@string/drawer_title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/ordersDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.orders.OrdersFragment"
        android:label="@string/drawer_title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/profileDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.profile.ProfileFragment"
        android:label="@string/drawer_title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/dishDestination"
        android:name="ru.skillbranch.sbdelivery.ui.fragment.dish.DishFragment"
        android:label="DishFragment"
        tools:layout="@layout/fragment_dish">
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
        <argument
            android:name="price"
            app:argType="string" />
        <argument
            android:name="oldPrise"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="description"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/searchDestination"
        android:name="ru.skillbranch.sbdelivery.ui.search.SearchFragment"
        android:label="@string/search_dish"
        tools:layout="@layout/fragment_search" />

</navigation>