<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".ui.fragment.login.LoginFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLoginHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/e_mail"
        android:textColor="@color/color_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/wrLogin"
        app:layout_constraintStart_toStartOf="@+id/wrLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWrongLoginHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/login_error"
        android:textColor="@color/color_error"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/wrLogin"
        app:layout_constraintEnd_toEndOf="@+id/wrLogin"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrLogin"
        style="@style/TextInputLayoutAppearance"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="154dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/password"
        android:textColor="@color/color_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/wrPassword"
        app:layout_constraintStart_toStartOf="@+id/wrPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrPassword"
        style="@style/TextInputLayoutAppearance"
        android:layout_width="300dp"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:maxWidth="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/ButtonStyle"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_margin="56dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/ButtonStyle.Outline"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/color_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>