<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="158dp"
    android:layout_height="220dp"
    android:backgroundTint="@color/color_primary"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivDish"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:contentDescription="@string/dish_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/test_food1" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupPromo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="ivPromo, tvPromo"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/ivPromo"
            android:layout_width="54dp"
            android:layout_height="17dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/bg_promo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/promotion" />

        <TextView
            android:id="@+id/tvPromo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promotion"
            android:textColor="@color/color_black"
            android:textSize="10sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ivPromo"
            app:layout_constraintEnd_toEndOf="@+id/ivPromo"
            app:layout_constraintStart_toStartOf="@+id/ivPromo"
            app:layout_constraintTop_toTopOf="@+id/ivPromo"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/ivLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="11dp"
            android:contentDescription="@string/like_button"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textColor="@color/color_secondary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDish"
            tools:text="1280 ₽" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/color_on_primary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice"
            tools:text="Сет Королевский" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddToCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/add_dish_to_cart_button"
            android:src="@drawable/ic_add"
            app:fabCustomSize="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivDish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDish" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>